--- a/index.html
+++ b/index.html
@@ -5,10 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>banana speak</title>
-    <script src="app.js" type="text/javascript"></script>
+    
+    <style>
+        textarea{
+            width: 90%;
+            height: 10vh;
+            display:block;
+            margin: 1reml;
+            padding: 1rem;;
+        }
+    </style>
 </head>
 <body>
     <h1>talk banana</h1>
+    <textarea name="" id="txt-input" cols="30" rows="10"></textarea>
+    <button id="btn-translate">Translate</button>
     <script src="app.js" type="text/javascript"></script>
 </body>
 </html>
