--- a/index.html
+++ b/index.html
@@ -14,12 +14,22 @@
             margin: 1reml;
             padding: 1rem;;
         }
+        
+        #output{
+            border: 1px solid black;
+            height: 10vh;
+            width: 80%;
+            padding: 1rem;;
+        }
     </style>
 </head>
 <body>
     <h1>talk banana</h1>
-    <textarea name="" id="txt-input" cols="30" rows="10"></textarea>
+    <textarea name="" id="txt-input" placeholder="put your sentence in English here and we will convert it to banana"></textarea>
     <button id="btn-translate">Translate</button>
+
+    <div style="font-size: larger;">Output will come here 👇</div>
+    <div id="output"></div>
     <script src="app.js" type="text/javascript"></script>
 </body>
 </html>
